Inclusão dos outros sliders na Home

--- a/site/html/modules/header.html
+++ b/site/html/modules/header.html
@@ -80,8 +80,8 @@
                       </div>
 
                     <div class="col-3 menu-column-1 g-0">                    
-                      <a class="produtos">Imagem</a>
-                      <a class="produtos">Legenda</a>
+                      <img src="/site/images/02_home/Alma Collection Home.webp" alt="">
+                      <p class="produtos">Legenda</p>
                     </div>
                   </div>
 
