--- a/index.html
+++ b/index.html
@@ -297,6 +297,31 @@
 
 		<!-- ========= SCRIPTS ANTES DO /BODY ========= -->
 	
+		<!-- Chamadas do Slick Carousel -->
+		<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+		<script>
+		$(document).ready(function() {
+			$('.classSlick').slick({          
+				accessibility: true,
+				adaptiveHeight: true,
+				autoplay: true,
+				autoplaySpeed: 3000,
+				arrows: true,
+				dots: false,
+				draggable: true,
+				fade: true,
+				infinite: true,
+				lazyLoad: 'ondemand',
+				mobileFirst: true,
+				rows: 1,
+				slidesToShow: 1,
+				slidesToScroll: 1,
+				speed: 500
+			});
+		});
+		</script>
+
 		<!-- <script>
 			// CHECA OS COOKIES E SE O USUÁRIO ESTÁ LOGADO
 
@@ -321,31 +346,6 @@
 			// 	});
 			// });
 			</script> -->
-
-		<!-- CHAMADAS DO SLICK CAROUSEL -->
-		<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-		<script>
-		$(document).ready(function() {
-			$('.classSlick').slick({          
-				accessibility: true,
-				adaptiveHeight: true,
-				autoplay: true,
-				autoplaySpeed: 3000,
-				arrows: true,
-				dots: false,
-				draggable: true,
-				fade: true,
-				infinite: true,
-				lazyLoad: 'ondemand',
-				mobileFirst: true,
-				rows: 1,
-				slidesToShow: 1,
-				slidesToScroll: 1,
-				speed: 500
-			});
-		});
-		</script>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
