--- a/site/html/modules/header.html
+++ b/site/html/modules/header.html
@@ -80,7 +80,7 @@
                       </div>
 
                     <div class="col-3 menu-column-1 g-0">                    
-                      <img src="/site/images/02_home/Alma Collection Home.webp" alt="">
+                      <img src="/site/images/02_home/Alma Collection Home.webp" class="img-fluid" alt="">
                       <p class="produtos">Legenda</p>
                     </div>
                   </div>
