Alteração do Slider pro Index e ajuste nos links da Home

--- a/site/html/modules/header.html
+++ b/site/html/modules/header.html
@@ -80,8 +80,8 @@
                       </div>
 
                     <div class="col-3 menu-column-1 g-0">                    
-                      <img src="/site/images/02_home/Alma Collection Home.webp" class="img-fluid" alt="">
-                      <p class="produtos">Legenda</p>
+                      <img src="/site/images/02_home/Alma Collection Home.webp" class="img-fluid py-3" alt="">
+                      <p class="produtos">Legenda do Produto</p>
                     </div>
                   </div>
 
