Inclusão do rodapé e dos logotipos

--- a/site/html/modules/footer.html
+++ b/site/html/modules/footer.html
@@ -1,4 +1,77 @@
-<div class="container-fluid fundo-preto mt-5">
+<div class="container-fluid fundo-cinza mt-5 py-3">
+
+  <div class="container">
+    <div class="row">
+      <!-- <div class="col-xl-3 col-md-6 col-12"> -->
+
+      <div class="col-xl-3 col-md-6 col-12">
+        <h5 class="footer-subtitle">Floricolor</h5>
+        <p><strong>#</strong>WE<strong>PRINT</strong>LOVE</p>
+
+        <div class="footer-redes">
+          <p><a href="https://www.facebook.com/floricolor.albums/">
+            <i class="fa-brands fa-facebook icone-redes" ></i></a></p>
+          
+          <p><a href="https://www.instagram.com/floricolor/">
+            <i class="fa-brands fa-instagram icone-redes" ></i></a></p>
+          
+          <p><a href="https://www.linkedin.com/company/floricolor">
+            <i class="fa-brands fa-linkedin icone-redes" ></i></a></p>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-md-6 col-12">
+        <h5 class="footer-subtitle">Sobre Nós</h5>
+        <p class="footer-links"><a href="https://www.floricolor.com/empresa/" class="links-texto">Empresa</a></p>
+        <p class="footer-links"><a href="https://www.blog.floricolor.pt/" class="links-texto">Blog</a></p>
+        <p class="footer-links"><a href="https://www.floricolor.com/novo-registo/" class="links-texto">Registo</a></p>        
+      </div>
+
+      <div class="col-xl-3 col-md-6 col-12">
+        <h5 class="footer-subtitle">Produtos</h5>
+        <p class="footer-links"><a href="https://www.floricolor.com/politica-de-mostruario/" class="links-texto">Política de Mostruário</a></p>
+        <p class="footer-links"><a href="https://www.floricolor.com/todos-materiais/" class="links-texto">Materiais</a></p>
+      </div>
+
+      <div class="col-xl-3 col-md-6 col-12">
+        <h5 class="footer-subtitle">Ajuda</h5>
+        <p class="footer-links"><a href="https://www.floricolor.com/contacto/" class="links-texto">Contactos</a></p>
+        <p class="footer-links"><a href="https://www.floricolor.com/ajuda/#ajudaFaqs" class="links-texto">FAQs</a></p>
+        <p class="footer-links"><a href="https://www.floricolor.com/ajuda/#ajudaTemplates" class="links-texto">Downloads</a></p>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="container-fluid mt-5 mb-3">
+    <div class="footer-logos">
+      <div class="col-xl-1 col-md-2 col-12">
+        <img src="/site/images/03_footer/norte_2020.svg" height="30" alt="">
+      </div>
+      <div class="col-xl-1 col-md-2 col-12">
+        <img src="/site/images/03_footer/portugal_2020.svg" height="30" alt="">
+      </div>
+      <div class="col-xl-1 col-md-2 col-12">
+        <img src="/site/images/03_footer/uniao_2020.svg" height="30" alt="">
+      </div>
+      <div class="col-xl-1 col-md-2 col-12">
+        <img src="/site/images/03_footer/LogoFujifilmSiteGray.png" height="30" alt="">
+      </div>
+      <div class="col-xl-1 col-md-2 col-12">
+        <img src="/site/images/03_footer/LogoFedrigoniSiteGray.png" height="30" alt="">
+      </div>
+      <div class="col-xl-1 col-md-2 col-12">
+        <img src="/site/images/03_footer/LogoPhotopaperSiteGray.png" height="30" alt="">
+      </div>
+      <div class="col-xl-1 col-md-2 col-12">
+        <img src="/site/images/03_footer/LogoBraintreeSiteGray.png" height="30" alt="">
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="container-fluid fundo-preto">
   <div class="container">
     <div class="row px-3">
 
@@ -7,7 +80,14 @@
       </div>
 
       <div class="col-xl-6 col-md-6 col-12 text-end text-white mt-4">
-        <p>Política de Privacidade | Termos e Condições | Livro de Reclamações</p>
+        <p>
+          <a href="https://www.floricolor.com/politica-de-privacidade/" style="color: #FFF; text-decoration: none;">
+            Política de Privacidade</a> |
+          <a href="https://www.floricolor.com/termos-condicoes/" style="color: #FFF; text-decoration: none;">
+            Termos e Condições</a> |
+          <a href="https://www.livroreclamacoes.pt/Inicio/" style="color: #FFF; text-decoration: none;">
+            Livro de Reclamações</a>
+        </p>
       </div>
 
     </div>
