Inclusão da página Alma Collection

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
 		<div class="row justify-content-center">
 			<div class="col-xl-4 col-md-4 col-sm-6 col-12 py-2">
-				<a href="https://floricolor.com/duo-collection/">
+				<a href="/site/html/pages/products/01_collections/alma-collection.html">
 					<img src="/site/images/02_home/Alma Collection Home.webp" alt="Alma Collection" class="img-fluid">
 				</a>
 				<h5 class="text-center">Alma Collection</h5>
@@ -575,6 +575,7 @@
 			</div>
 		</div> -->
 
+	<!-- ========= FOOTER ========= -->
 
 	<div>
 		<div id="includedContent-footer"></div>
