--- a/site/html/modules/footer.html
+++ b/site/html/modules/footer.html
@@ -2,8 +2,6 @@
 
   <div class="container">
     <div class="row">
-      <!-- <div class="col-xl-3 col-md-6 col-12"> -->
-
       <div class="col-xl-3 col-md-6 col-12">
         <h5 class="footer-subtitle">Floricolor</h5>
         <p><strong>#</strong>WE<strong>PRINT</strong>LOVE</p>
@@ -46,25 +44,32 @@
   <div class="container-fluid mt-5 mb-3">
     <div class="footer-logos">
       <div class="col-xl-1 col-md-2 col-12">
-        <img src="/site/images/03_footer/norte_2020.svg" height="30" alt="">
+        <a href="https://www.floricolor.pt/pt/norte2020-internaciolanizacao.html">
+        <img src="/site/images/03_footer/norte_2020.svg" height="30" alt=""></a>
       </div>
       <div class="col-xl-1 col-md-2 col-12">
-        <img src="/site/images/03_footer/portugal_2020.svg" height="30" alt="">
+        <a href="https://www.floricolor.pt/pt/norte2020-internaciolanizacao.html">
+        <img src="/site/images/03_footer/portugal_2020.svg" height="30" alt=""></a>
       </div>
       <div class="col-xl-1 col-md-2 col-12">
-        <img src="/site/images/03_footer/uniao_2020.svg" height="30" alt="">
+        <a href="https://www.floricolor.pt/pt/norte2020-internaciolanizacao.html">
+        <img src="/site/images/03_footer/uniao_2020.svg" height="30" alt=""></a>
       </div>
       <div class="col-xl-1 col-md-2 col-12">
-        <img src="/site/images/03_footer/LogoFujifilmSiteGray.png" height="30" alt="">
+        <a href="https://www.fujifilm.com/us/en/business/graphics-printing/digital-printing/j-press-750s">
+        <img src="/site/images/03_footer/LogoFujifilmSiteGray.png" height="30" alt=""></a>
       </div>
       <div class="col-xl-1 col-md-2 col-12">
-        <img src="/site/images/03_footer/LogoFedrigoniSiteGray.png" height="30" alt="">
+        <a href="https://paper.fedrigoni.com/">
+        <img src="/site/images/03_footer/LogoFedrigoniSiteGray.png" height="30" alt=""></a>
       </div>
       <div class="col-xl-1 col-md-2 col-12">
-        <img src="/site/images/03_footer/LogoPhotopaperSiteGray.png" height="30" alt="">
+        <a href="https://www.originalphotopaper.com/en/">
+        <img src="/site/images/03_footer/LogoPhotopaperSiteGray.png" height="30" alt=""></a>
       </div>
       <div class="col-xl-1 col-md-2 col-12">
-        <img src="/site/images/03_footer/LogoBraintreeSiteGray.png" height="30" alt="">
+        <a href="https://www.braintreepayments.com/">
+        <img src="/site/images/03_footer/LogoBraintreeSiteGray.png" height="30" alt=""></a>
       </div>
     </div>
   </div>
